--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /*  your css code here. If applicable */
+
+body #line{
+    color: black;
+    width: 200px;
+    height: 2px;
+    margin-top:50vh;
+    margin-left: 500px;
+}
